# zero-to-cad-server

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: 推理参数说明.md
scripts/: build-image.ps1  check-container.ps1  check.ps1  run-container.ps1  run-dev.ps1
src/zero_to_cad_runtime/: exporter.py  jobs.py  main.py  model.py  schemas.py
src/zero_to_cad_server/: config.py  export_runner.py  exporter.py  jobs.py  main.py  schemas.py
tests/: test_config.py  test_jobs.py
